@@ -463,6 +463,7 @@ S3method(svyranktest,DBIsvydesign)
 S3method(svyivreg,survey.design)
 S3method(svyivreg, svyrep.design)
 S3method(summary, svyivreg)
+S3method(vcov, svyivreg)
 
 S3method(psrsq,glm)
 S3method(psrsq,svyglm)
@@ -501,3 +502,6 @@ S3method(svyby, xdesign)
 S3method(dim, xdesign)
 S3method(dimnames, xdesign)
 
+S3method(estfuns, coxph)
+S3method(estfuns, glm)
+S3method(estfuns, lm)
