@@ -57,6 +57,7 @@ requests from users, including:
   Alex Kowarik
   Michael Laviolette
   Thomas Leeper
+  Chandler McClellan
   Klaus Ignacio Lehmann Melendez
   Benmei Liu
   Sebastien Lucie
